<resources>
    <!--Activity IntroCadastro-->
    <string name="app_name">Organizze</string>
    <string name="OnClick_btnCadastreSe">btnCadastraSe</string>
    <string name="btnCadastreSe">Cadastre-se</string>
    <string name="OnClick_textEntrar">btnEntrar</string>
    <string name="text_title_IntroCadastro">Crie sua conta grátis</string>
    <string name="text_subtitle_introCadastro">Junte-se a mais de meio milhao\n de pessoas e comece já</string>
    <string name="text_title_ActivityCadastro">Crie sua conta grátis</string>
    <string name="text_entrar">Já tenho conta</string>

    <!--Activity Cadastro-->
    <string name="editNome_hint">Nome</string>
    <string name="editEmail_hint">Email</string>
    <string name="editSenha_hint">Senha</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="OnClick_btnCadastrar">btnCadastrar</string>
    <string name="text_termoUso">Termos de uso</string>
</resources>